--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-torch
-torchvision
-pillow
-opencv-python==4.5.3.56
+streamlit==1.37.1
+torch==2.0.1
+torchvision==0.15.2
+pillow==10.4.0
+numpy==1.23.5
+opencv-python-headless==4.5.3.56
